Contrast & minor fixes

--- a/style.css
+++ b/style.css
@@ -54,13 +54,22 @@ nav ul li {
 	margin-left: auto; 
 	margin-right: 0;
 }
+
 nav a {
 	color: white;
 }
 
 a {
-	color: #006cd0;
+	color: #3fc7fd;
 	text-decoration: none;
+}
+
+a:active {
+	color: #feff2b;
+}
+
+a:hover {
+	color: #feff2b;
 }
 
 i span {
@@ -87,6 +96,7 @@ The above copyright notice and this permission notice shall be included in all c
 
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  */
+ 
 @font-face {
     font-family: ForkAwesome;
     src: url(https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/fonts/forkawesome-webfont.eot?v=1.2.0);
